[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/enemy.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Enemy.gd" type="Script" id=2]
[ext_resource path="res://assets/stomp_sound_cut.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 20 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 37, 11 )

[sub_resource type="Animation" id=3]
resource_name = "death"

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource( 2 )
gravity = 8000.0

[node name="enemy" type="Sprite" parent="."]
position = Vector2( -0.5, -31.5 )
scale = Vector2( 0.65625, 0.65625 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -20 )
shape = SubResource( 1 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( -0.500001, -31 )
scale = Vector2( 3.55, 3.1 )
process_parent = true
physics_process_parent = true

[node name="StompDetector" type="Area2D" parent="."]
modulate = Color( 0, 0, 1, 1 )
position = Vector2( 0, -46 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompDetector"]
position = Vector2( 0, -5 )
shape = SubResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/death = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
pause_mode = 2
[connection signal="body_entered" from="StompDetector" to="." method="_on_StompDetector_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
